--- a/pomodoro/Base.lproj/Main.storyboard
+++ b/pomodoro/Base.lproj/Main.storyboard
@@ -23,13 +23,13 @@
                                     <constraint firstAttribute="height" constant="100" id="YdV-rI-vVp"/>
                                 </constraints>
                             </imageView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GvB-uh-1PO">
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GvB-uh-1PO">
                                 <rect key="frame" x="24" y="248" width="342" height="60"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" translatesAutoresizingMaskIntoConstraints="NO" id="32I-1Q-W3J">
+                            <progressView opaque="NO" alpha="0.0" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" translatesAutoresizingMaskIntoConstraints="NO" id="32I-1Q-W3J">
                                 <rect key="frame" x="48" y="338" width="294" height="4"/>
                             </progressView>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" style="wheels" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPR-hB-Kr8">
@@ -97,6 +97,7 @@
                         <outlet property="progressView" destination="32I-1Q-W3J" id="K4M-W3-9dE"/>
                         <outlet property="timeLabel" destination="GvB-uh-1PO" id="LN8-W8-8Wy"/>
                         <outlet property="toggleButton" destination="Nes-q4-0Eb" id="LCc-Mn-B4l"/>
+                        <outlet property="tomato" destination="0ii-eY-9qs" id="ATt-Rz-1gH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
